[tool.poetry]
name = "escrow-contract"
version = "0.1.0"
description = ""
authors = ["maxson-dev"]
readme = "README.md"
packages = [{include = "escrow_contract"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
eth-brownie = "^1.19.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
